--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <section class="hero" data-aos="fade-up">
     <h1>Welcome to Herbal Nutrition</h1>
-    <p>Discover recipes, blogs, and tips for a healthier lifestyle</p>
+    <p>Discover herbal recipes, natural remedies, and wellness blogs.</p>
     <div class="search-bar">
       <input type="text" id="searchInput" placeholder="Search herbs, recipes...">
       <button id="searchBtn">Search</button>
