--- a/recipes.html
+++ b/recipes.html
@@ -21,11 +21,11 @@
 
   <section class="page" data-aos="fade-right">
     <h2>Our Recipes</h2>
-    <p>Explore healthy herbal recipes crafted for wellness.</p>
+    <p>Healthy herbal recipes crafted for wellness.</p>
     <div class="cards">
       <div class="card" data-aos="zoom-in">
         <h3>Tulsi Tea</h3>
-        <p>Boost immunity and reduce stress.</p>
+        <p>Boosts immunity and reduces stress.</p>
       </div>
       <div class="card" data-aos="zoom-in">
         <h3>Ginger Honey Tea</h3>
