--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
     <div class="cards">
       <div class="card" data-aos="fade-up">
         <h3>The Healing Power of Tulsi</h3>
-        <p>Learn why Tulsi is considered the queen of herbs.</p>
+        <p>Why Tulsi is called the queen of herbs.</p>
       </div>
       <div class="card" data-aos="fade-up">
         <h3>Daily Detox with Herbal Teas</h3>
