--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
   <section class="page" data-aos="fade-up">
     <h2>About Us</h2>
-    <p>Herbal Nutrition is dedicated to sharing the wisdom of natural remedies, recipes, and wellness tips to promote a healthier lifestyle.</p>
+    <p>Herbal Nutrition shares the wisdom of natural remedies, herbal recipes, and wellness tips to help you live a healthier life.</p>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
